# did-plc-tools

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
crypto-traits/: Cargo.toml
crypto-traits/src/: impls.rs  lib.rs  traits.rs
did-key/: Cargo.toml
did-key/src/: did_key.rs  lib.rs
did-key/src/key_algo/: mod.rs  p256.rs  secp256k1.rs
did-plc/: Cargo.toml
did-plc/src/: aka_uri.rs  did_plc.rs  handle.rs  helpers.rs  lib.rs  main.rs  plc_operation_ref.rs  plc_service.rs
did-plc/src/operation/: mod.rs  signed.rs  unsigned.rs
guides/: add_rot_key.md  self_signing.md
plc-interface/: Cargo.toml
plc-interface/src/: app.rs  main.rs
plc-interface/src/app/: key_store.rs
plc-interface/src/plc_builder/: aka.rs  mod.rs  rotation_keys.rs  services.rs  verification_methods.rs
plc-interface/src/signing_key/: collection.rs  container.rs  key.rs  mod.rs
plc-interface/src/ui_helpers/: hash_map.rs  mod.rs
src/: helpers.rs  lib.rs  main.rs
