[package]
name = "did-plc-tools"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "did-plc",
    "plc-interface"
]

[workspace.dependencies]
did-plc = { path = "did-plc" }
serde = "1.0"
serde_ipld_dagcbor = "0.6"
k256 = "0.14.0-pre.2"
url = "2.5.4"
did-key = "0.2.1"
serde_json = "1.0.134"
base64 = "0.22.1"
base32 = "0.5.1"
sha2 = "0.11.0-pre.4"
chrono = "0.4.39"
egui = "0.30.0"


[dependencies]
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
k256 = { workspace = true }
url = { workspace = true }
did-key = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
base32 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
