[package]
name = "did-plc-tools"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crypto-traits",
    "did-key",
    "did-plc",
    "plc-interface"
]

[profile.dev]
debug-assertions = true

[workspace.dependencies]
did-plc = { path = "did-plc" }
did-key = { path = "did-key" }
crypto-traits = { path = "crypto-traits" }

serde = "1.0"
serde_json = "1.0.134"
serde_ipld_dagcbor = "0.6"

sha2 = "0.11.0-pre.4"
k256 = "0.13"
p256 = "0.13"
secp256k1 = { version = "0.30.0", features = ["global-context", "serde"] }

multibase = "0.9.1"
base32 = "0.5.1"
base64 = "0.22.1"
url = "2.5.4"

chrono = "0.4.39"
reqwest = "0.12.12"
itertools = "0.14.0"
rand = "^0.8"

anyhow = "1.0.95"
thiserror = "2.0.9"
derive-new = "0.7.0"
derive_more = { version = "1.0.0", features = ["from", "display", "default"] }

egui = "0.30.0"
eframe = "0.30.0"

log = "0.4.22"
env_logger = "0.11.6"
