[package]
name = "did-key"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

sha2 = { workspace = true }
p256 = { workspace = true }
k256 = "^0.13"
elliptic-curve = "^0.13"
crypto-traits = { workspace = true }

multibase = { workspace = true }
base64 = { workspace = true }
base32 = { workspace = true }
url = { workspace = true }

chrono = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }

thiserror = { workspace = true }
derive_more = { workspace = true, features = ["into"] }
