[package]
name = "did-plc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

sha2 = { workspace = true }
p256 = { workspace = true }
secp256k1 = { workspace = true }

multibase = { workspace = true }
base64 = { workspace = true }
base32 = { workspace = true }
url = { workspace = true }

chrono = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
