[package]
name = "did-plc"
version = "0.1.0"
edition = "2021"

[dependencies]
did-key = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

sha2 = { workspace = true }
p256 = { workspace = true }
secp256k1 = { workspace = true }

multibase = { workspace = true }
base64 = { workspace = true }
base32 = { workspace = true }
url = { workspace = true, features = ["serde"] }

chrono = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
regex = "1.11.1"