[package]
name = "plc-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
did-plc = { workspace = true }
url = { workspace = true }
did-key = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
