[package]
name = "plc-interface"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
crypto-traits = { workspace = true }
did-plc = { workspace = true }
did-key = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true, features = ["persistence"] }

env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
derive-new = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
bincode = "1.3.3"

sha2 = { workspace = true }
p256 = { workspace = true, features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
elliptic-curve = "^0.13"
ecdsa = { version = "^0.16", features = ["signing", "verifying"] }
cid = "^0.11"

multibase = { workspace = true }
base64 = { workspace = true }
base32 = { workspace = true }
url = { workspace = true }

chrono = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
itertools = "0.14.0"
rand = "0.8.5"